--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
-    "@types/ws": "^8.5.4"
+    "@types/ws": "^8.5.4",
+    "typescript": "^4.9.5"
   }
 }
